--- a/json-config-ref.json
+++ b/json-config-ref.json
@@ -1,5 +1,5 @@
 {
-    "$schema": "http://json-schema.org/draft-07/schema#",
+    "$schema": "https://json-schema.org/draft/2020-12/schema",
     "title": "Ballsdex configuration",
     "description": "Core settings for the Ballsdex Discord bot",
     "type": "object",
